--- a/Twitter/Storyboards/Base.lproj/Main.storyboard
+++ b/Twitter/Storyboards/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -250,51 +251,65 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="igk-FG-03f" userLabel="Banner Image View">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="207"/>
+                                <color key="backgroundColor" name="ColorScheme"/>
+                                <color key="tintColor" name="ColorScheme"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="igk-FG-03f" secondAttribute="height" multiplier="640:320" id="Zly-XZ-QD2"/>
+                                </constraints>
+                            </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EhZ-K6-aVW" userLabel="Profile Image View">
-                                <rect key="frame" x="20" y="108" width="73" height="73"/>
+                                <rect key="frame" x="20" y="177" width="73" height="73"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="73" id="Xkc-5i-BTe"/>
                                     <constraint firstAttribute="width" constant="73" id="j3q-wR-y6U"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="John Doe" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AGr-ni-Fgp" userLabel="Username Label">
-                                <rect key="frame" x="20" y="191" width="394" height="27"/>
+                                <rect key="frame" x="20" y="260" width="374" height="27"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@screenname" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gyv-27-vXd" userLabel="Screenname Label">
-                                <rect key="frame" x="20" y="218" width="394" height="21"/>
+                                <rect key="frame" x="20" y="287" width="374" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.39607843139999999" green="0.46666666670000001" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="40" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="klm-Xx-VJD" userLabel="Following Count Label">
-                                <rect key="frame" x="20" y="254" width="21" height="21"/>
+                                <rect key="frame" x="20" y="353.33333333333331" width="21" height="21"/>
                                 <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Following" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h4P-YB-twu" userLabel="Following Label">
-                                <rect key="frame" x="45.999999999999993" y="254" width="72.333333333333314" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Following" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h4P-YB-twu" userLabel="Following Label">
+                                <rect key="frame" x="46" y="411" width="72.333333333333314" height="21"/>
                                 <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.39607843139999999" green="0.46666666670000001" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eIu-AA-KhP" userLabel="Followers Count Label">
-                                <rect key="frame" x="128.33333333333334" y="254" width="18" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eIu-AA-KhP" userLabel="Followers Count Label">
+                                <rect key="frame" x="128" y="411" width="18" height="21"/>
                                 <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Followers" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hAp-Or-yyp" userLabel="Followers Label">
-                                <rect key="frame" x="151.33333333333334" y="254" width="72.333333333333343" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" misplaced="YES" text="Followers" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hAp-Or-yyp" userLabel="Followers Label">
+                                <rect key="frame" x="151" y="411" width="72.333333333333343" height="21"/>
                                 <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.39607843139999999" green="0.46666666670000001" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1RV-YC-cQZ" userLabel="Description Label">
+                                <rect key="frame" x="20" y="318" width="374" height="20.333333333333314"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -303,18 +318,24 @@
                             <constraint firstItem="MZm-Ic-id7" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="hAp-Or-yyp" secondAttribute="trailing" id="34t-7v-UKo"/>
                             <constraint firstItem="gyv-27-vXd" firstAttribute="leading" secondItem="AGr-ni-Fgp" secondAttribute="leading" id="5Ml-3B-ewT"/>
                             <constraint firstItem="h4P-YB-twu" firstAttribute="leading" secondItem="klm-Xx-VJD" secondAttribute="trailing" constant="5" id="C4Q-Wg-vF2"/>
-                            <constraint firstItem="MZm-Ic-id7" firstAttribute="trailing" secondItem="AGr-ni-Fgp" secondAttribute="trailing" id="C76-ZN-gaV"/>
+                            <constraint firstItem="MZm-Ic-id7" firstAttribute="trailing" secondItem="AGr-ni-Fgp" secondAttribute="trailing" constant="20" id="C76-ZN-gaV"/>
                             <constraint firstItem="EhZ-K6-aVW" firstAttribute="leading" secondItem="MZm-Ic-id7" secondAttribute="leading" constant="20" id="GqX-aG-rBL"/>
+                            <constraint firstItem="1RV-YC-cQZ" firstAttribute="leading" secondItem="gyv-27-vXd" secondAttribute="leading" id="I0I-tK-kGY"/>
+                            <constraint firstItem="igk-FG-03f" firstAttribute="leading" secondItem="MZm-Ic-id7" secondAttribute="leading" id="Kef-a9-A2E"/>
                             <constraint firstItem="AGr-ni-Fgp" firstAttribute="leading" secondItem="EhZ-K6-aVW" secondAttribute="leading" id="MOb-Dh-nDo"/>
+                            <constraint firstItem="igk-FG-03f" firstAttribute="top" secondItem="cDy-r3-PlG" secondAttribute="top" id="OZG-EK-lyf"/>
                             <constraint firstItem="gyv-27-vXd" firstAttribute="top" secondItem="AGr-ni-Fgp" secondAttribute="bottom" id="PYN-g8-pAD"/>
                             <constraint firstItem="eIu-AA-KhP" firstAttribute="centerY" secondItem="h4P-YB-twu" secondAttribute="centerY" id="RqO-Bw-HLg"/>
                             <constraint firstItem="AGr-ni-Fgp" firstAttribute="top" secondItem="EhZ-K6-aVW" secondAttribute="bottom" constant="10" id="ZME-d4-WAr"/>
                             <constraint firstItem="hAp-Or-yyp" firstAttribute="centerY" secondItem="eIu-AA-KhP" secondAttribute="centerY" id="fKk-Ar-GTG"/>
                             <constraint firstItem="hAp-Or-yyp" firstAttribute="leading" secondItem="eIu-AA-KhP" secondAttribute="trailing" constant="5" id="fT2-xd-hNs"/>
-                            <constraint firstItem="klm-Xx-VJD" firstAttribute="top" secondItem="gyv-27-vXd" secondAttribute="bottom" constant="15" id="iib-ee-zl1"/>
+                            <constraint firstItem="EhZ-K6-aVW" firstAttribute="top" secondItem="igk-FG-03f" secondAttribute="bottom" constant="-30" id="gqR-zu-yNH"/>
+                            <constraint firstItem="MZm-Ic-id7" firstAttribute="trailing" secondItem="igk-FG-03f" secondAttribute="trailing" id="jdI-Kb-Oru"/>
                             <constraint firstItem="h4P-YB-twu" firstAttribute="centerY" secondItem="klm-Xx-VJD" secondAttribute="centerY" id="kxR-Dk-DMY"/>
+                            <constraint firstItem="1RV-YC-cQZ" firstAttribute="top" secondItem="gyv-27-vXd" secondAttribute="bottom" constant="10" id="nmx-0w-Pui"/>
                             <constraint firstItem="eIu-AA-KhP" firstAttribute="leading" secondItem="h4P-YB-twu" secondAttribute="trailing" constant="10" id="pIM-Zi-E7F"/>
-                            <constraint firstItem="EhZ-K6-aVW" firstAttribute="top" secondItem="MZm-Ic-id7" secondAttribute="top" constant="20" id="vgU-nU-Gdv"/>
+                            <constraint firstItem="1RV-YC-cQZ" firstAttribute="trailing" secondItem="gyv-27-vXd" secondAttribute="trailing" id="v2y-px-3zm"/>
+                            <constraint firstItem="klm-Xx-VJD" firstAttribute="top" secondItem="1RV-YC-cQZ" secondAttribute="bottom" constant="15" id="x8S-7e-wNd"/>
                             <constraint firstItem="gyv-27-vXd" firstAttribute="trailing" secondItem="AGr-ni-Fgp" secondAttribute="trailing" id="xgs-8T-jvb"/>
                             <constraint firstItem="klm-Xx-VJD" firstAttribute="leading" secondItem="gyv-27-vXd" secondAttribute="leading" id="yFj-mc-ZD5"/>
                         </constraints>
@@ -322,10 +343,12 @@
                     </view>
                     <navigationItem key="navigationItem" id="4GP-h7-e7s"/>
                     <connections>
+                        <outlet property="bannerImageView" destination="igk-FG-03f" id="tef-SX-uKc"/>
+                        <outlet property="descriptionLabel" destination="1RV-YC-cQZ" id="IoI-7O-pmP"/>
                         <outlet property="followersCountLabel" destination="eIu-AA-KhP" id="gGx-e2-hAO"/>
                         <outlet property="followingCountLabel" destination="klm-Xx-VJD" id="0tF-js-JL6"/>
                         <outlet property="profileImageView" destination="EhZ-K6-aVW" id="DPQ-pm-GAg"/>
-                        <outlet property="screennameLabel" destination="gyv-27-vXd" id="tId-iw-1j8"/>
+                        <outlet property="screennameLabel" destination="gyv-27-vXd" id="HDo-gX-xmM"/>
                         <outlet property="usernameLabel" destination="AGr-ni-Fgp" id="cvB-mC-tKe"/>
                     </connections>
                 </viewController>
@@ -456,5 +479,8 @@
         <image name="favor-icon" width="30" height="30"/>
         <image name="profile-Icon" width="26" height="26"/>
         <image name="retweet-icon" width="30" height="30"/>
+        <namedColor name="ColorScheme">
+            <color red="0.11372549019607843" green="0.63137254901960782" blue="0.94901960784313721" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
