--- a/Twitter/Storyboards/Base.lproj/Main.storyboard
+++ b/Twitter/Storyboards/Base.lproj/Main.storyboard
@@ -278,38 +278,52 @@
                                 <color key="textColor" red="0.39607843139999999" green="0.46666666670000001" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="40" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="klm-Xx-VJD" userLabel="Following Count Label">
-                                <rect key="frame" x="20" y="353.33333333333331" width="21" height="21"/>
-                                <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Following" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h4P-YB-twu" userLabel="Following Label">
-                                <rect key="frame" x="46" y="411" width="72.333333333333314" height="21"/>
-                                <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.39607843139999999" green="0.46666666670000001" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eIu-AA-KhP" userLabel="Followers Count Label">
-                                <rect key="frame" x="128" y="411" width="18" height="21"/>
-                                <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" misplaced="YES" text="Followers" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hAp-Or-yyp" userLabel="Followers Label">
-                                <rect key="frame" x="151" y="411" width="72.333333333333343" height="21"/>
-                                <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.39607843139999999" green="0.46666666670000001" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1RV-YC-cQZ" userLabel="Description Label">
                                 <rect key="frame" x="20" y="318" width="374" height="20.333333333333314"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="354" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Agb-9Z-D0t" userLabel="Tweets Count Label">
+                                <rect key="frame" x="20" y="353.33333333333331" width="31" height="21"/>
+                                <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tweets" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u1P-pC-Cpw" userLabel="Tweets Label">
+                                <rect key="frame" x="56" y="353.33333333333331" width="54.666666666666657" height="21"/>
+                                <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.39607843139999999" green="0.46666666670000001" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="40" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="klm-Xx-VJD" userLabel="Following Count Label">
+                                <rect key="frame" x="120.66666666666669" y="353.33333333333331" width="21" height="21"/>
+                                <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Following" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h4P-YB-twu" userLabel="Following Label">
+                                <rect key="frame" x="146.66666666666666" y="353.33333333333331" width="72.333333333333343" height="21"/>
+                                <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.39607843139999999" green="0.46666666670000001" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eIu-AA-KhP" userLabel="Followers Count Label">
+                                <rect key="frame" x="229" y="353.33333333333331" width="18" height="21"/>
+                                <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Followers" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hAp-Or-yyp" userLabel="Followers Label">
+                                <rect key="frame" x="252.00000000000003" y="353.33333333333331" width="72.333333333333343" height="21"/>
+                                <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.39607843139999999" green="0.46666666670000001" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -317,27 +331,32 @@
                         <constraints>
                             <constraint firstItem="MZm-Ic-id7" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="hAp-Or-yyp" secondAttribute="trailing" id="34t-7v-UKo"/>
                             <constraint firstItem="gyv-27-vXd" firstAttribute="leading" secondItem="AGr-ni-Fgp" secondAttribute="leading" id="5Ml-3B-ewT"/>
-                            <constraint firstItem="h4P-YB-twu" firstAttribute="leading" secondItem="klm-Xx-VJD" secondAttribute="trailing" constant="5" id="C4Q-Wg-vF2"/>
+                            <constraint firstItem="u1P-pC-Cpw" firstAttribute="centerY" secondItem="Agb-9Z-D0t" secondAttribute="centerY" id="7Vm-sG-BZV"/>
                             <constraint firstItem="MZm-Ic-id7" firstAttribute="trailing" secondItem="AGr-ni-Fgp" secondAttribute="trailing" constant="20" id="C76-ZN-gaV"/>
+                            <constraint firstItem="klm-Xx-VJD" firstAttribute="centerY" secondItem="u1P-pC-Cpw" secondAttribute="centerY" id="D81-xC-gVC"/>
                             <constraint firstItem="EhZ-K6-aVW" firstAttribute="leading" secondItem="MZm-Ic-id7" secondAttribute="leading" constant="20" id="GqX-aG-rBL"/>
                             <constraint firstItem="1RV-YC-cQZ" firstAttribute="leading" secondItem="gyv-27-vXd" secondAttribute="leading" id="I0I-tK-kGY"/>
                             <constraint firstItem="igk-FG-03f" firstAttribute="leading" secondItem="MZm-Ic-id7" secondAttribute="leading" id="Kef-a9-A2E"/>
                             <constraint firstItem="AGr-ni-Fgp" firstAttribute="leading" secondItem="EhZ-K6-aVW" secondAttribute="leading" id="MOb-Dh-nDo"/>
+                            <constraint firstItem="Agb-9Z-D0t" firstAttribute="top" secondItem="1RV-YC-cQZ" secondAttribute="bottom" constant="15" id="NDU-3t-ZsH"/>
                             <constraint firstItem="igk-FG-03f" firstAttribute="top" secondItem="cDy-r3-PlG" secondAttribute="top" id="OZG-EK-lyf"/>
                             <constraint firstItem="gyv-27-vXd" firstAttribute="top" secondItem="AGr-ni-Fgp" secondAttribute="bottom" id="PYN-g8-pAD"/>
                             <constraint firstItem="eIu-AA-KhP" firstAttribute="centerY" secondItem="h4P-YB-twu" secondAttribute="centerY" id="RqO-Bw-HLg"/>
+                            <constraint firstItem="Agb-9Z-D0t" firstAttribute="leading" secondItem="1RV-YC-cQZ" secondAttribute="leading" id="XOn-yZ-8FF"/>
                             <constraint firstItem="AGr-ni-Fgp" firstAttribute="top" secondItem="EhZ-K6-aVW" secondAttribute="bottom" constant="10" id="ZME-d4-WAr"/>
+                            <constraint firstItem="h4P-YB-twu" firstAttribute="leading" secondItem="klm-Xx-VJD" secondAttribute="trailing" constant="5" id="dHL-kM-dW5"/>
                             <constraint firstItem="hAp-Or-yyp" firstAttribute="centerY" secondItem="eIu-AA-KhP" secondAttribute="centerY" id="fKk-Ar-GTG"/>
                             <constraint firstItem="hAp-Or-yyp" firstAttribute="leading" secondItem="eIu-AA-KhP" secondAttribute="trailing" constant="5" id="fT2-xd-hNs"/>
                             <constraint firstItem="EhZ-K6-aVW" firstAttribute="top" secondItem="igk-FG-03f" secondAttribute="bottom" constant="-30" id="gqR-zu-yNH"/>
                             <constraint firstItem="MZm-Ic-id7" firstAttribute="trailing" secondItem="igk-FG-03f" secondAttribute="trailing" id="jdI-Kb-Oru"/>
                             <constraint firstItem="h4P-YB-twu" firstAttribute="centerY" secondItem="klm-Xx-VJD" secondAttribute="centerY" id="kxR-Dk-DMY"/>
+                            <constraint firstItem="klm-Xx-VJD" firstAttribute="leading" secondItem="u1P-pC-Cpw" secondAttribute="trailing" constant="10" id="lsb-G9-YPG"/>
                             <constraint firstItem="1RV-YC-cQZ" firstAttribute="top" secondItem="gyv-27-vXd" secondAttribute="bottom" constant="10" id="nmx-0w-Pui"/>
                             <constraint firstItem="eIu-AA-KhP" firstAttribute="leading" secondItem="h4P-YB-twu" secondAttribute="trailing" constant="10" id="pIM-Zi-E7F"/>
                             <constraint firstItem="1RV-YC-cQZ" firstAttribute="trailing" secondItem="gyv-27-vXd" secondAttribute="trailing" id="v2y-px-3zm"/>
+                            <constraint firstItem="u1P-pC-Cpw" firstAttribute="leading" secondItem="Agb-9Z-D0t" secondAttribute="trailing" constant="5" id="wwJ-hW-DT0"/>
                             <constraint firstItem="klm-Xx-VJD" firstAttribute="top" secondItem="1RV-YC-cQZ" secondAttribute="bottom" constant="15" id="x8S-7e-wNd"/>
                             <constraint firstItem="gyv-27-vXd" firstAttribute="trailing" secondItem="AGr-ni-Fgp" secondAttribute="trailing" id="xgs-8T-jvb"/>
-                            <constraint firstItem="klm-Xx-VJD" firstAttribute="leading" secondItem="gyv-27-vXd" secondAttribute="leading" id="yFj-mc-ZD5"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="MZm-Ic-id7"/>
                     </view>
@@ -349,6 +368,7 @@
                         <outlet property="followingCountLabel" destination="klm-Xx-VJD" id="0tF-js-JL6"/>
                         <outlet property="profileImageView" destination="EhZ-K6-aVW" id="DPQ-pm-GAg"/>
                         <outlet property="screennameLabel" destination="gyv-27-vXd" id="HDo-gX-xmM"/>
+                        <outlet property="tweetsCountLabel" destination="Agb-9Z-D0t" id="oBC-mQ-NQl"/>
                         <outlet property="usernameLabel" destination="AGr-ni-Fgp" id="cvB-mC-tKe"/>
                     </connections>
                 </viewController>
